--- a/03_histogram/src/CMakeLists.txt
+++ b/03_histogram/src/CMakeLists.txt
@@ -13,7 +13,7 @@ if(MSVC)
 endif()
 
 # input image selection
-set(InputImage_DIR ../data/lena.tiff CACHE FILEPATH "Input image file")
+set(InputImage_DIR data/lena.tiff CACHE FILEPATH "Input image file")
 add_definitions(-DINPUTIMAGE=\"${InputImage_DIR}\")
 
 set(CMAKE_CXX_STANDARD 11)
